<resources>
    <string name="app_name">ASAM</string>
    <string name="empty_content_description"></string>
    <string name="hyphen_text">-</string>
    <string name="map_type_normal_text">Normal</string>
    <string name="map_type_satellite_text">Satellite</string>
    <string name="map_type_hybrid_text">Hybrid</string>
    <string name="map_type_offline_text">Offline 1:110m</string>
    <string name="offline_map_progress_dialog_title_text">Please wait...</string>
    <string name="offline_map_progress_dialog_content_text">Loading offline map data</string>
    <string name="asam_map_label">ASAM</string>
    <string name="filter_label">Filters</string>
    <string name="filter_interval_label">Time Interval</string>
    <string name="filter_current_subregion_label">Current Subregion</string>
    <string name="all_asams_list_title_text">List View</string>
    <string name="all_asams_about_title_text">Help</string>
    <string name="all_asams_report_title_text">Submit Report</string>
    <string name="all_asams_show_regions_title_text">Show Regions</string>
    <string name="all_asams_map_title_text">ASAM</string>
    <string name="all_asams_map_query_error_text">There was an error retrieving new ASAMs.</string>
    <string name="all_asams_map_no_asams_text">No ASAM activity found</string>
    <string name="all_asams_map_1_asam_text">1 Result</string>
    <string name="all_asams_map_1_asam_text_with_timespan">1 Filtered ASAM</string>
    <string name="all_asams_map_1_asam_text_with_timespan_with_subregions">1 Result; %1$s; %2$s</string>
    <string name="all_asams_map_multiple_asams_text">%d Results</string>
    <string name="all_asams_map_multiple_asams_text_with_timespan">%1$d Filtered ASAMs</string>
    <string name="all_asams_map_multiple_asams_text_with_timespan_with_subregions">%1$d Results; %2$s; %3$s</string>
    <string name="all_asams_map_1_subregion_text">1 Subregion</string>
    <string name="all_asams_map_multiple_subregions_text">%d Subregions</string>
    <string name="all_asams_map_query_progress_dialog_title_text">ASAM Query</string>
    <string name="all_asams_map_query_progress_dialog_content_text">Checking for new ASAMs</string>
    <string name="all_asams_map_menu_list_view_text">List View</string>
    <string name="all_asams_map_menu_query_text">Query</string>
    <string name="all_asams_map_menu_map_type_text">Map Type</string>
    <string name="all_asams_map_menu_60_days_text">60 days</string>
    <string name="all_asams_map_menu_90_days_text">90 days</string>
    <string name="all_asams_map_menu_180_days_text">180 days</string>
    <string name="all_asams_map_menu_1_year_text">1 year</string>
    <string name="all_asams_map_menu_5_years_text">5 years</string>
    <string name="all_asams_map_menu_all_text">All</string>
    <string name="all_asams_map_menu_custom_text">Custom</string>
    <string name="all_asams_map_tablet_query_error_text">There was an error retrieving new ASAMs.</string>
    <string name="all_asams_map_tablet_no_asams_text">No ASAM activity found</string>
    <string name="all_asams_map_tablet_query_progress_dialog_title_text">ASAM Query</string>
    <string name="all_asams_map_tablet_query_progress_dialog_content_text">Checking for new ASAMs</string>
    <string name="all_asams_map_tablet_date_text">--/--/----</string>
    <string name="all_asams_map_tablet_selected_date_text">(--/--/----)</string>
    <string name="all_asams_map_tablet_subregions_query_mode_message_text"><![CDATA[<u><b>Selected Subregion(s)</b></u><p>&nbsp;&nbsp;&nbsp;%s</p>Click <i>Menu->Reset</i> to return to "All ASAMs" mode.]]></string>
    <string name="all_asams_map_tablet_text_query_mode_message_text"><![CDATA[%s<br/>]]></string>
    <string name="all_asams_map_tablet_menu_list_view_text">List View</string>
    <string name="all_asams_map_tablet_change_subregions_text">Select Regions</string>
    <string name="all_asams_map_tablet_menu_subregions_text">Subregions</string>
    <string name="all_asams_map_tablet_menu_settings_text">Settings</string>
    <string name="all_asams_map_tablet_menu_text_filter_text">Filters</string>
    <string name="all_asams_map_tablet_menu_reset_text">Reset</string>
    <string name="all_asams_map_tablet_menu_info_text">Info</string>
    <string name="asam_list_report_tablet_title_text">ASAM List</string>
    <string name="asam_list_fragment_menu_sort_text">Sort</string>
    <string name="asam_list_title_text">ASAMs</string>
    <string name="asam_list_empty_list_text">There are no ASAMs.</string>
    <string name="asam_list_menu_sort_text">Sort</string>
    <string name="asam_list_map_menu_zoom_menu_item_text">Zoom</string>
    <string name="asam_list_row_date_label_text">Date:</string>
    <string name="asam_list_row_subregion_label_text">Subregion:</string>
    <string name="asam_list_row_aggressor_label_text">Aggressor:</string>
    <string name="asam_list_row_victim_label_text">Victim:</string>
    <string name="asam_list_sort_popup_title_text">Asam List Sort</string>
    <string name="asam_list_sort_popup_prompt_text">Sort By</string>
    <string name="asam_list_sort_popup_sort_button_text">Sort</string>
    <string name="asam_list_sort_popup_cancel_button_text">Cancel</string>
    <string name="asam_list_sort_popup_spinner_prompt_text">Sort By</string>
    <string name="asam_list_sort_popup_ascending_radio_button_text">Ascending</string>
    <string name="asam_list_sort_popup_descending_radio_button_text">Descending</string>
    <string name="asam_report_title_text">ASAM Details</string>
    <string name="asam_report_occurrence_date_label_text">Date of Occurrence</string>
    <string name="asam_report_aggressor_label_text">Aggressor</string>
    <string name="asam_report_victim_label_text">Victim</string>
    <string name="asam_report_subregion_label_text">Geographical Subregion</string>
    <string name="asam_report_reference_number_label_text">Reference Number</string>
    <string name="asam_report_location_label_text">Geographical Location</string>
    <string name="asam_report_description_label_text">Description</string>
    <string name="asam_report_map_it_label_text">Map It</string>
    <string name="asam_report_back_button_text">Back</string>
    <string name="tablet_disclaimer">true</string>
    <string name="disclaimer_title_text">Disclaimer</string>
    <string name="disclaimer_show_text">Show this disclaimer on launch</string>
    <string name="disclaimer_text">
        Information contained in this Application resides on a computer system funded by the National Geospatial-Intelligence Agency. This system
        and related equipment are intended for the communication, transmission, processing and storage of U.S. Government information.\n\nWith respect to
        information available in this Application, neither the United States Government nor the National Geospatial-Intelligence Agency nor any of their
        employees, makes any warranty, express or implied, including the warranties of merchantability and fitness for a particular purpose, or assumes any
        legal liability or responsibility for the accuracy, completeness, or usefullness of any information, apparatus, product, or process disclosed, or
        represents that its use would not infringe privately owned rights.\n\nUser agrees, through use of this product, to assume any and all liability
        for any damage or loss resulting from your use of the content or the
        products and holds NGA harmless from liability.
    </string>
    <string name="disclaimer_exit_button_text">Exit</string>
    <string name="disclaimer_agree_button_text">I Agree</string>
    <string name="info_title_text">ASAM Info</string>
    <string name="info_dialog_fragment_close_button_text">Close</string>
    <string name="info_fragment_image_content_description_text">NGA Logo</string>
    <string name="info_fragment_version_text">ASAM v1.0.0</string>
    <string name="info_fragment_info_text">Anti-Shipping Activity Messages (ASAM) include the locations and descriptive accounts of specific hostile acts against ships and mariners. The reports may be useful for recognition, prevention and avoidance of potential hostile activity.</string>
    <string name="info_fragment_about_link_text">ASAM Website</string>
    <string name="info_fragment_about_asam_link_text">http://msi.nga.mil/NGAPortal/MSI.portal?_nfpb=true&amp;_st=&amp;_pageLabel=msi_portal_page_65</string>
    <string name="info_fragment_contact_text">Contact Us</string>
    <string name="info_fragment_phone_number_text">1-800-362-6289</string>
    <string name="info_fragment_report_info_text">To report ASAM information please reference the $$Submit Report$$ section of the Maritime Safety Information portal.</string>
    <string name="info_fragment_report_url_text">http://msi.nga.mil/NGAPortal/MSI.portal?_nfpb=true&amp;_st=&amp;_pageLabel=msi_portal_page_70&amp;subCode=01</string>
    <string name="info_fragment_email_subject_text">ASAM app feedback</string>
    <string name="info_fragment_email_text"><a href="mailto:MCDASAM@nga.mil">MCDASAM@nga.mil</a></string>
    <string name="info_fragment_email_address">MCDASAM@nga.mil</string>
    <string name="info_fragment_menu_info_text">About</string>
    <string name="info_fragment_menu_asam_info_text">ASAM Information</string>
    <string name="info_fragment_legal_row_text">Legal Information</string>
    <string name="launch_screen_all_asams_label_text">Map View</string>
    <string name="launch_screen_subregions_label_text">Subregions</string>
    <string name="launch_screen_text_query_label_text">ASAM Query</string>
    <string name="launch_screen_settings_label_text">Settings</string>
    <string name="legal_title_text">Legal</string>
    <string name="legal_fragment_nga_disclaimer_label_text">NGA Disclaimer</string>
    <string name="legal_fragment_nga_privacy_policy_label_text">NGA Privacy Policy</string>
    <string name="legal_fragment_nga_open_source_licenses_label_text">Open Source Licenses</string>
    <string name="legal_details_title_text">License</string>
    <string name="legal_details_nga_disclaimer_title_text">NGA Disclaimer</string>
    <string name="legal_details_nga_privacy_policy_title_text">ASAM App</string>
    <string name="preferences_last_sync_time_label_text">Last Sync Time %1$s</string>
    <string name="preferences_sync_now_button_text">Sync Now</string>
    <string name="preferences_hide_disclaimer_label_text">Disclaimer</string>
    <string name="preferences_hide_disclaimer_checkbox_text">Hide Disclaimer</string>
    <string name="sort_asam_list_dialog_fragment_spinner_prompt_text">Sort By</string>
    <string name="sort_asam_list_dialog_fragment_ascending_radio_button_text">Ascending</string>
    <string name="sort_asam_list_dialog_fragment_descending_radio_button_text">Descending</string>
    <string name="subregion_map_menu_selected_subregions_text">Selected Subregions</string>
    <string name="subregion_map_menu_reset_text">Reset</string>
    <string name="subregion_map_menu_clear_text">Clear</string>
    <string name="text_query_select_subregion_label_text">Subregions</string>
    <string name="text_query_status_content_description_text">Current Status</string>
    <string name="text_query_reference_number_label_text">Reference Number</string>
    <string name="text_query_victim_label_text">Victim</string>
    <string name="text_query_victim_content_description_text">Victim</string>
    <string name="text_query_aggressor_label_text">Aggressor</string>
    <string name="text_query_aggressor_content_description_text">Aggressor</string>
    <string name="text_query_date_from_text">Date From:</string>
    <string name="text_query_date_to_text">Date To:</string>
    <string name="text_query_year_hint_text">YYYY</string>
    <string name="text_query_number_hint_text">###</string>
    <string name="text_query_date_hint_text">MM/DD/YYYY</string>
</resources>