<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:minWidth="400dp">
        
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:padding="10dp">
        
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_nga_logo"
            android:layout_gravity="center"
            android:paddingBottom="15dp"
            android:contentDescription="@string/info_fragment_image_content_description_text"
            />
            
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_fragment_version_text"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="2dp"
            />
        
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/info_fragment_info_text"
            />
        
        <TableLayout android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:stretchColumns="0"
        	android:paddingTop="25dp">
        
        	<TableRow android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    android:padding="10dp"
        		android:clickable="true"
        		android:onClick="legalRowClicked">
            
            	<TextView android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:layout_gravity="left|center_vertical"
                	android:text="@string/info_fragment_legal_row_text"
                	/>
            	
            	<ImageView android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:src="@drawable/ic_keyboard_arrow_right_white"
            		android:layout_gravity="center"
            		android:paddingRight="15dp"
            		android:contentDescription="@string/empty_content_description"
            		/>
            
        	</TableRow>
        
    	</TableLayout>
            
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_fragment_contact_text"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="25dp"
            />
            
        <TextView android:id="@+id/info_phone_number_text_ui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/info_fragment_phone_number_text"
            android:textIsSelectable="false"
            android:autoLink="phone"
            android:paddingTop="20dp"
            />
            
        <TextView android:id="@+id/info_email_text_ui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:gravity="center"
            android:onClick="emailLinkClicked"
            android:textIsSelectable="true"
            android:clickable="true"
            android:text="@string/info_fragment_email_text"
            />
        
    </LinearLayout>
        
</ScrollView>